--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -5,5 +5,13 @@ spring:
     password: ${PGPASSWORD}
   jpa:
     open-in-view: false
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
+logging:
+  level:
+    org:
+      springframework:
+        jdbc: DEBUG
+    com:
+      .zaxxer: DEBUG
